[package]
name = "rust-bma4"
description = "100% rust support for Bosh BMA4xx accelerometers"
authors = ["redengin <sholstei@yahoo.com>"]
repository = "https://github.com/redengin/rust-bma4"
categories = ["embedded", "no-std"]
keywords = ["bosch", "bma421", "accelerometer"]
readme = "README.md"
license = "LICENSE"
edition = "2018"
version = "0.0.1"

[dependencies]
embedded-hal = { version = "0.2", features = ["unproven"], default-features = false }
num_enum = { version="0.5.7", default-features=false }

[dev-dependencies]
# configured for demo on pinetime
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3", features = ["cortex-m"]}
nrf52832-hal = { version = "0.15", features = ["rt", "xxAA-package"], default-features = false }


[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1 # better optimizations
opt-level = "s"
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
